# rust-in-action

ch5/cpu1/src/: main.rs
ch5/cpu2/: Cargo.toml
ch5/cpu2/src/: main.rs
ch5/cpu3/: Cargo.toml
ch5/cpu3/src/: main.rs
ch5/examples/: f32_as_u32.rs  f32_experiments.rs  visualizing_f32.rs
ch5/q7/: Cargo.toml
ch5/q7/src/: lib.rs
ch6/meminfo-win/: Cargo.toml
ch6/meminfo-win/src/: main.rs
ch6/memscan1/: Cargo.toml
ch6/memscan1/src/: main.rs
ch6/memscan3/: Cargo.toml
ch6/memscan3/src/: main.rs
ch6/particles/: Cargo.toml
ch6/particles/src/: main.rs
ch7/actionkv/: Cargo.toml
ch7/actionkv/src/: akv_disk.rs  akv_mem.rs  lib.rs
ch7/fview-str/: Cargo.toml
ch7/fview-str/src/: main.rs
ch7/fview/src/: main.rs
ch7/serde-eg/: Cargo.toml
ch7/serde-eg/src/: main.rs
ch7/write123/: Cargo.toml
ch7/write123/src/: main.rs
ch8/ch8-simple/: Cargo.toml
ch8/ch8-simple/src/: main.rs
ch8/ch8-stdlib/: Cargo.toml
ch8/ch8-stdlib/src/: main.rs
ch8/resolve/: Cargo.toml
ch8/resolve/src/: main.rs
grep-lite/: Cargo.toml  test.txt
grep-lite/src/: main.rs
